# product-service/swagger.yml
@@ -1,9 +1,9 @@
-openapi: '3.0.2'
+openapi: "3.0.2"
 info:
   title: API product-service
-  version: '1.0'
+  version: "1.1"
 servers:
-  - url: https://1d6y1e8y9h.execute-api.eu-west-1.amazonaws.com/dev
+  - url: https://mpgqy60s6i.execute-api.eu-west-1.amazonaws.com/dev
 paths:
   /products:
     get:
@@ -12,16 +12,49 @@ paths:
         - Products
       operationId: getProductsList
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Products'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
+                $ref: "#/components/schemas/Products"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+    post:
+      summary: Create a new product
+      tags:
+        - Products
+      operationId: createProduct
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                price:
+                  type: integer
+                count:
+                  type: integer
+                description:
+                  type: string
+              required:
+                - "title"
+      responses:
+        "201":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
   /products/{productId}:
     get:
       summary: Get the product by ID
@@ -36,16 +69,16 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
+                $ref: "#/components/schemas/Product"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 components:
   responses:
     NotFound:
@@ -53,13 +86,19 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'    
+            $ref: "#/components/schemas/Error"
+    BadRequest:
+      description: Bad request
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Error"
     InternalServerError:
       description: Internal server error
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            $ref: "#/components/schemas/Error"
   schemas:
     Product:
       type: object
@@ -84,7 +123,7 @@ components:
     Products:
       type: array
       items:
-        $ref: '#/components/schemas/Product'
+        $ref: "#/components/schemas/Product"
     Error:
       type: object
       properties:
